min, date range picker

--- a/frontend/admin/data_modul/soal.html
+++ b/frontend/admin/data_modul/soal.html
@@ -383,7 +383,7 @@
                                             </button>
                                         </div>
                                         <div class="p-2 bd-highlight">
-                                            <button id="simpan" class="btn btn-default btn-round ml-auto mb-3">
+                                            <button class="btn btn-default btn-round ml-auto mb-3">
                                                 Refresh Soal
                                             </button>
                                         </div>
