--- a/frontend/admin/data_tes/tambah_tes.html
+++ b/frontend/admin/data_tes/tambah_tes.html
@@ -28,7 +28,9 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/atlantis.min.css">
-    <link rel="stylesheet" href="/assets/css/demo.css">
+    <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 </head>
 
 <body>
@@ -380,6 +382,17 @@
                                         </div>
                                         <div class="col-md-6 mt--4">
                                             <div class="form-group">
+                                                <label>Input DateTime Picker</label>
+                                                <div class="input-group">
+                                                    <input type="text" name="datetimes">
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text">
+                                                            <i class="fa fa-calendar"></i>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- <div class="form-group">
                                                 <label class="ml-2">Rentang waktu</label>
                                                 <div class="col-sm-12">
                                                     <div class="input-group">
@@ -393,7 +406,7 @@
                                                     </div>
                                                     <p class="mt-2 text-muted">Rentang waktu tes dilaksanakan</p>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="col-md-5 mt--4">
                                             <div class="form-group">
@@ -485,6 +498,20 @@
             </footer>
         </div>
     </div>
+    <!-- daterange -->
+    <script>
+        $(function () {
+            $('input[name="datetimes"]').daterangepicker({
+                timePicker: true,
+                startDate: moment().startOf('hour'),
+                endDate: moment().startOf('hour').add(32, 'hour'),
+                locale: {
+                    format: 'M/DD hh:mm A'
+                }
+            });
+        });
+    </script>
+
     <!--   Core JS Files   -->
     <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="/assets/js/core/popper.min.js"></script>
