--- a/frontend/admin/pengaturan/pengaturan_level.html
+++ b/frontend/admin/pengaturan/pengaturan_level.html
@@ -338,112 +338,9 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <button class="btn btn-primary btn-round ml-auto mb-3" data-toggle="modal"
-                                            data-target="#editUser">
-                                            Tambah Level
-                                        </button>
+                                        <a href="tambah_level.html" class="btn btn-default btn-round ml-auto mb-3"
+                                            role="button">Tambah Level</a>
                                     </div>
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="editUser" tabindex="-1" role="dialog"
-                                        aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header text-center">
-                                                    <h4 class="modal-title">
-                                                        <span class="fw-mediumbold">
-                                                            Tambah</span>
-                                                        <span class="fw-light">
-                                                            Level
-                                                        </span>
-                                                    </h4>
-                                                    <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <form role="form">
-                                                        <div class="row">
-                                                            <div class="col-md-6">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="username" type="text"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="username"
-                                                                        class="placeholder">Username</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="password" type="password"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="password" class="placeholder">Password
-                                                                    </label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group from-group-default">
-                                                                    <label class="control-label">Level</label>
-                                                                    <select name="level" id="level"
-                                                                        class="form-control input-sm">
-                                                                        <option value="admin">admin</option>
-                                                                        <option value="operator-soal">operator-soal
-                                                                        </option>
-                                                                        <option value="operator-tes">operator-tes
-                                                                        </option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6 mt-3">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="nama" type="text"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="nama" class="placeholder">Nama
-                                                                        Pengguna</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="opsi1" type="text"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="opsi1" class="placeholder">Opsi
-                                                                        1</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="opsi2" type="text"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="opsi2" class="placeholder">Opsi
-                                                                        2</label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group form-floating-label">
-                                                                    <input id="keterangan" type="text"
-                                                                        class="form-control input-border-bottom"
-                                                                        required="">
-                                                                    <label for="keterangan"
-                                                                        class="placeholder">Keterangan</label>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                                <div class="modal-footer no-bd justify-content-center">
-                                                    <button type="button" id="simpan"
-                                                        class="btn btn-primary">Simpan</button>
-                                                    <button type="button" class="btn btn-danger"
-                                                        data-dismiss="modal">Batal</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- End Modal -->
                                     <table
                                         class="table table-bordered table-responsive-md border-top border-left border-right table-own"
                                         style="white-space: nowrap;">
