--- a/frontend/admin/data_tes/daftar_tes.html
+++ b/frontend/admin/data_tes/daftar_tes.html
@@ -339,61 +339,9 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="d-flex ">
-                                        <button class="btn btn-primary btn-round ml-auto mb-3" data-toggle="modal"
-                                            data-target="#addRowModal">
+                                        <a class="btn btn-primary btn-round ml-auto mb-3" href="tambah_tes.html">
                                             Tambah Tes
-                                        </button>
-                                        <!-- Modal -->
-                                        <div class="modal fade" id="addRowModal" tabindex="-1" role="dialog"
-                                            aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                                                <div class="modal-content">
-                                                    <div class="modal-header text-center">
-                                                        <h4 class="modal-title w-100">
-                                                            <span class="fw-mediumbold">
-                                                                Tambah</span>
-                                                            <span class="fw-light">
-                                                                Group
-                                                            </span>
-                                                        </h4>
-                                                        <button type="button" class="close" data-dismiss="modal"
-                                                            aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        <form role="form">
-                                                            <div class="row mt-3">
-                                                                <div class="col-md-12 mt-2">
-                                                                    <div class="form-group from-group-default">
-                                                                        <label class="control-label">Nama Group</label>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-md-12 mt--3">
-                                                                    <div class="form-group from-group-default">
-                                                                        <input type="text" class="form-control"
-                                                                            id="tambah-group" name="tambah-group"
-                                                                            placeholder="Nama Group">
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-md-12 mt--2">
-                                                                    <div class="form-group from-group-default">
-                                                                        <p style="color: red;">NB : Group digunakan
-                                                                            untuk mengelompokkan setiap user
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </form>
-                                                    </div>
-                                                    <div class="modal-footer no-bd justify-content-center">
-                                                        <button type="button" id="simpan"
-                                                            class="btn btn-primary">Simpan</button>
-                                                        <button type="button" class="btn btn-danger"
-                                                            data-dismiss="modal">Batal</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <table
                                         class="table table-bordered table-responsive-md border-top border-left border-right table-own"
