create logo and setup navigation logout

--- a/frontend/admin/data_modul/daftar_soal.html
+++ b/frontend/admin/data_modul/daftar_soal.html
@@ -108,7 +108,63 @@
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#">Password</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Logout</a>
+                                            <a class="dropdown-item"
+                                                href="/frontend/login/login_operator.html">Logout</a>
+                                        </li>
+                                    </div>
+                                    <div class="scroll-element scroll-x">
+                                        <div class="scroll-element_outer">
+                                            <div class="scroll-element_size"></div>
+                                            <div class="scroll-element_track"></div>
+                                            <div class="scroll-bar ui-draggable ui-draggable-handle"
+                                                style="width: 100px;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="scroll-element scroll-y">
+                                        <div class="scroll-element_outer">
+                                            <div class="scroll-element_size"></div>
+                                            <div class="scroll-element_track"></div>
+                                            <div class="scroll-bar ui-draggable ui-draggable-handle"
+                                                style="height: 99px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="purple">
+                <div class="container-fluid">
+                    <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                        <li class="nav-item dropdown hidden-caret submenu">
+                            <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
+                                aria-expanded="false">
+                                <div class="avatar-sm">
+                                    <img src="/assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu dropdown-user animated fadeIn">
+                                <div class="scroll-wrapper dropdown-user-scroll scrollbar-outer"
+                                    style="position: relative;">
+                                    <div class="dropdown-user-scroll scrollbar-outer scroll-content"
+                                        style="height: auto; margin-bottom: 0px; margin-right: 0px; max-height: 274.833px;">
+                                        <li>
+                                            <div class="user-box">
+                                                <div class="avatar-lg"><img src="/assets/img/profile.jpg"
+                                                        alt="image profile" class="avatar-img rounded"></div>
+                                                <div class="u-text submenu mt-2">
+                                                    <h4>Administrator</h4>
+                                                    <p class="text-muted">Selamat Datang</p>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="#">Password</a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item"
+                                                href="/frontend/login/login_operator.html">Logout</a>
                                         </li>
                                     </div>
                                     <div class="scroll-element scroll-x">
