--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -102,7 +102,7 @@
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#">Password</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Logout</a>
+                                            <a class="dropdown-item" href="../login/login_operator.html">Logout</a>
                                         </li>
                                     </div>
                                     <div class="scroll-element scroll-x">
@@ -190,17 +190,17 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="./table_two/seleksi_mahasiswa.html">
+                                        <a href="./data_peserta/daftar_group.html">
                                             <span class="sub-item">Daftar Group</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./table_two/mahasiswa_asing.html">
+                                        <a href="./data_peserta/daftar_peserta.html">
                                             <span class="sub-item">Daftar Peserta</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./table_two/mahasiswa_asing.html">
+                                        <a href="./data_peserta/import_data.html">
                                             <span class="sub-item">Import Data Peserta</span>
                                         </a>
                                     </li>
@@ -216,37 +216,37 @@
                             <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="./table_three/dosen_tetap_perguruan.html">
+                                        <a href="./data_tes/tambah_tes.html">
                                             <span class="sub-item"> Tambah Tes</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/daftar_tes.html">
                                             <span class="sub-item">Daftar Tes</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/evaluasi_tes.html">
                                             <span class="sub-item">Evaluasi Tes</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/hasil_tes.html">
                                             <span class="sub-item">Hasil Tes</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/rekap_hasil.html">
                                             <span class="sub-item">Rekap Hasil Tes</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/token.html">
                                             <span class="sub-item">Token</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="./data_tes/hasil_tes_operator.html">
                                             <span class="sub-item">Hasil Tes Operator</span>
                                         </a>
                                     </li>
@@ -262,7 +262,7 @@
                             <div class="collapse" id="table_five">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="./table_five/kurikulum_capaian.html">
+                                        <a href="./tool/backup_data.html">
                                             <span class="sub-item">Backup Data</span>
                                         </a>
                                     </li>
@@ -278,17 +278,17 @@
                             <div class="collapse" id="table_six">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="./table_six/penelitian_dtps_mahasiswa.html">
+                                        <a href="./pengaturan/pengaturan_user.html">
                                             <span class="sub-item">Pengaturan User</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./table_six/penelitian_dtps_rujukan.html">
+                                        <a href="./pengaturan/pengaturan_level.html">
                                             <span class="sub-item">Pengaturan Level</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./table_six/penelitian_dtps_rujukan.html">
+                                        <a href="./pengaturan/pengaturan_menu.html">
                                             <span class="sub-item">Pengaturan Menu</span>
                                         </a>
                                     </li>
