--- a/frontend/admin/data_tes/rekap_hasil.html
+++ b/frontend/admin/data_tes/rekap_hasil.html
@@ -98,7 +98,8 @@
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#">Password</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Logout</a>
+                                            <a class="dropdown-item"
+                                                href="/frontend/login/login_operator.html">Logout</a>
                                         </li>
                                     </div>
                                     <div class="scroll-element scroll-x">
