--- a/frontend/login/login_operator.html
+++ b/frontend/login/login_operator.html
@@ -50,7 +50,7 @@
                 <img src="/assets/images/iconPetikLogin.png" alt="" />
             </div>
             <p class="mx-3">
-                Selamat datang di Sistem Tes berbasis komputer Universitas Muhammadiyah Magelang<br /><br />
+                Selamat datang di Sistem Tes Berbasis Komputer Universitas Muhammadiyah Magelang<br /><br />
             </p>
             <div class="elbow-sign float-right">
                 <img src="/assets/images/iconSikuLogin.png" alt="" />
@@ -63,7 +63,7 @@
         <div class="col-sm-6 col-md-6 pb-5">
             <div class="colom-right">
                 <div class="back-sign">
-                    <i class="fas fa-chevron-left">
+                    <i class="fas fa-arrow-left">
                         <a href="landing_page.html">&nbsp;Kembali</a>
                     </i>
                 </div>
@@ -73,14 +73,14 @@
                 <form action="#">
                     <div class="form-group">
                         <div class="placeholder-style">
-                            <label for="email">Email</label>
+                            <label for="username">Username</label>
                             <div class="input-group shadow-sm mb-2">
                                 <div class="input-group-prepend">
                                     <button class="btn btn-style" type="button">
                                         <i class="far fa-user"></i>
                                     </button>
                                 </div>
-                                <input type="text" class="form-control" id="email" placeholder="Email " />
+                                <input type="text" class="form-control" id="username" placeholder="Username " />
                             </div>
                         </div>
                     </div>
