--- a/frontend/login/landing_page.html
+++ b/frontend/login/landing_page.html
@@ -49,7 +49,7 @@
                 <img src="/assets/images/iconPetikLogin.png" alt="" />
             </div>
             <p class="mx-3">
-                Selamat datang di Sistem Tes berbasis komputer Universitas Muhammadiyah Magelang<br /><br />
+                Selamat datang di Sistem Tes Berbasis Komputer Universitas Muhammadiyah Magelang<br /><br />
             </p>
             <div class="elbow-sign float-right">
                 <img src="/assets/images/iconSikuLogin.png" alt="" />
@@ -61,11 +61,6 @@
         <!-- text kanan -->
         <div class="col-sm-6 pb-5">
             <div class="colom-right">
-                <div class="back-sign" style="opacity: 0">
-                    <i class="fas fa-chevron-left">
-                        <a href="#">&nbsp;Kembali</a>
-                    </i>
-                </div>
                 <img src="/assets/images/unimmalogo.png" width="309px" alt="" />
                 <!-- after logo -->
                 <div class="card p-2">
