--- a/frontend/user/ujian.html
+++ b/frontend/user/ujian.html
@@ -195,14 +195,14 @@
                                 <i class="fa fa-ellipsis-h"></i>
                             </span>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a href="index.html">
                                 <i class="fas fa-tachometer-alt active"></i>
                                 <p>Dashboard</p>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="ujian.html">
+                        <li class="nav-item active">
+                            <a href="#">
                                 <i class="fas fa-book"></i>
                                 <p>Ujian</p>
                             </a>
@@ -219,7 +219,7 @@
                         <h4 class="page-title">Computer Based-Test</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
-                                <a href="#">
+                                <a href="index.html">
                                     <i class="flaticon-home"></i>
                                 </a>
                             </li>
@@ -227,26 +227,12 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Dashboard</a>
+                                <a href="#">Ujian</a>
                             </li>
                         </ul>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="card card-dark bg-primary-gradient">
-                                <div class="card-body pb-0">
-                                    <h2 class="mb-2">Selamat datang user</h2>
-                                    <h3 class="mb-2">Informasi</h3>
-                                    <p>Selamat datang di Sistem Ujian Berbasis Komputer Universitas Muhammadiyah
-                                        Magelang. Silahkan perhatikan beberapa petunjuk penggunaan.</p>
-                                    <div class="pull-in sparkline-fix chart-as-background">
-                                        <div id="lineChart"><canvas width="327" height="70"
-                                                style="display: inline-block; width: 327px; height: 70px; vertical-align: top;"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="row">
                         <div class="col-md-12">
